2005-09-30  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: Patch checks for %b and %d (%D) in .deb to remove
	%e from control Version field
	
2005-09-30  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: Add check for .py[c] that hard-code %d.
	Early-exit from line-by-line checks once we find one match.
	
2005-09-30  Daniel Macks  <dmacks@netspace.org>

	* Config.pm: Add new --log-output|-l top-level flag.
	* Engine.pm: Allow logging of build process for each package.
	* PkgVersion.pm: Add log_output stub method that will log output
	iff --log-output.

2005-09-29  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Engine.pm: Sort before pre-fetching, for reproducibility.
	* Engine.pm: Fixup get_pkglist, so it doesn't barf on packages available
	only in the status db.

2005-09-26  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Bootstrap.pm: Explain what goes into additional_packages

2005-09-26  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Make conditional_space_list remove
	leading/trailing whitespace.

2005-09-25  Alexander Hansen <alexkhansen@users.sourceforge.net>

	* PkgVersion.pm: Both of the axel versions that we have in Fink
	don't take --verbose.  Change flag to -v (which works) instead.

2005-09-21  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Make sure DocFiles targets are not
	group/world-writable but preserve execute bit.

2005-09-21  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: DocFiles handles conditionals, recursive copying
	of dirs, and implicit renaming dir1/dir2/file: to file.dir1.dir2

2005-09-21  Alexander Hansen <alexkhansen@users.sourceforge.net>

	* NetAccess.pm:	wget versions >= 1.10 use -no-verbose instead of 
	--non-verbose (arguably more GNU-standard).  In order that we may release
	a 1.10.x package use the short flag (-nv) instead as that is usable by both 
	wget < 1.10 and wget >= 1.10.

2005-09-16  Dave Vasilevsky  <vasi@users.sourceforge.net>
